--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 16.66rem;
-    margin: 0 .5rem 2.3rem .5rem;
+    margin: 0 1rem 2.3rem .5rem;
 }
 
 .Business .image-container {
