--- a/src/components/BusinessList/BusinessList.css
+++ b/src/components/BusinessList/BusinessList.css
@@ -1,6 +1,6 @@
 .BusinessList {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    margin: 4.4rem 10%;
+    margin: 4.4rem 5%;
 }
